[package]
name = "assembler-by-wasm"
version = "0.1.0"
authors = ["Rn86222 <rn86222.light0213@gmail.com>"]
description = "RISC-V assembler by wasm"
license = "MIT/Apache-2.0"
repository = "https://github.com/Rn86222/hello-wasm"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
